--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ais-Hits-list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.ais-Hits-item {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  padding: 1rem;
+  width: calc(25% - 1rem);
+  border: 1px solid #c4c8d8;
+  box-shadow: 0 2px 5px 0 #e3e5ec;
+}
+
+.ais-Pagination-list {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.ais-Pagination-link {
+  margin: 5px;
+  padding: 0.3rem 0.6rem;
+  display: block;
+  border: 1px solid #c4c8d8;
+  border-radius: 5px;
+  transition: background-color .2s ease-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ais-Pagination-item--disabled .ais-Pagination-link {
+  opacity: .6;
+  cursor: not-allowed;
+  color: #a5abc4;
+}
+
+.ais-RefinementList-item {
+  list-style: none;
+  margin: 10px 0;
+}
+
+input[type="search"] {
+  border: 1px solid grey;
+  border-radius: 5px;
+  height: 25px;
+  width: 50%;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  background-color: #f5f5f5;
+  margin-right: 20px;
+}
+
+input[type="search"]:hover input[type="search"]:focus {
+  border: 1px solid #009688;
+  background-color: white;
+}
+
+.ais-SearchBox-submit {
+  left: 0.3rem;
+  width: 25px;
+  height: 25px;
+}
+
+.search-panel__results {
+  flex: 3 1;
+}
+
+.ais-SearchBox-reset {
+  width: 25px;
+  height: 25px;
+  margin-left: 10px
+}
+
+.ais-SearchBox-form {
+  display: block;
+  position: relative;
+  padding-left: 15%;
 }
